added court crud page + fixed selection on loyalty page
