# server-go/pkg/gateways/rest/router.go
@@ -8,6 +8,7 @@ import (
 	"github.com/shampsdev/go-telegram-template/pkg/config"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_admins"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_auth"
+	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_courts"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_loyalties"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/admin_users"
 	"github.com/shampsdev/go-telegram-template/pkg/gateways/rest/image"
@@ -41,4 +42,5 @@ func setupRouter(ctx context.Context, r *gin.Engine, useCases usecase.Cases, cfg
 	admin_users.Setup(v1, useCases)
 	admin_admins.Setup(v1, useCases)
 	admin_loyalties.Setup(v1, useCases)
+	admin_courts.Setup(v1, useCases)
 }
